# ParallelFDTD

./: .gitignore  CMakeLists.txt  README.md  conda_environment.yml  conda_environment_with_cuda.yml  setup.py
matlab/: compileUNIX.m  mex_FDTD.cpp  mex_includes.h  testBench.m  triton_batch.sh
python/: testBench.py  triton_batch.sh
python/src/: init.py
src/: App.h  AppPy.cpp  CMakeLists.txt
src/kernels/: voxelizationUtils.cu  voxelizationUtils.h
tests/: AppTest.cpp  CMakeLists.txt  CudaMeshTest.cpp  CudaUtilsTest.cpp  FileReaderTest.cpp  GeometryHandlerTest.cpp  MaterialHandlerTest.cpp  SimulationParametersTest.cpp  SrcRecTest.cpp  VoxelizerTest.cpp
